--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	</h1>
 	<form action="visit-search-show.php" method="post">
 		<p style="font-size:25px;">出訪對象查詢:
-		<input type ="text" name="name" style="height:25px; width:100px;">&nbsp;
+		<input type ="text" name="name" style="height:25px; width:100px;">
+		<br />
 		<label for="bookdate">日期查詢：</label>
 		<input type="month" name="date" style="height:25px;">&nbsp;&nbsp;
 		<input type ="submit" value="搜尋">
